--- a/force-app/main/default/classes/TherapeuticAreaService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaService.cls
@@ -9,7 +9,9 @@ public with sharing class TherapeuticAreaService {
     public Set<String> getTANamesOnResource(Resource__c resource) {
         Set<String> tANames = new Set<String>();
         if(!String.isBlank(resource.Therapeutic_Areas__c)) {
-            tANames.addAll(resource.Therapeutic_Areas__c.split(';'));
+            for(String singleTAName : resource.Therapeutic_Areas__c.split(';')) {
+                tANames.add(singleTAName.trim());
+            }
         }
         return tANames;
     }
@@ -35,10 +37,14 @@ public with sharing class TherapeuticAreaService {
 
     public List<Therapeutic_Area__c> getThirdPartyCOIsByNames(Set<String> tANames, Boolean createIfNotExist) {
 
+        if(tANames == null || tANames.isEmpty()) {
+            return new List<Therapeutic_Area__c>();
+        }
+
         DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
         String tAsQuery = 'SELECT Id, ' +
-                        'Therapeutic_Area__c, ' +
-                        'Name ' +
+                'Therapeutic_Area__c, ' +
+                'Name ' +
                 'FROM Therapeutic_Area__c ' +
                 'WHERE RecordType.DeveloperName = \'' + TherapeuticAreaService.THIRD_PARTY_COI_RT_NAME +
                 '\' AND Name IN (' + String.join(CollectionUtil.getListOfIdsWrappedInApostrophes(tANames), ', ') + ')';
