--- a/force-app/main/default/classes/StudyDetailItem.cls
+++ b/force-app/main/default/classes/StudyDetailItem.cls
@@ -37,8 +37,12 @@ public class StudyDetailItem implements Comparable {
                 return 1;
             } else if (compareItem.sites[0].distance == null) {
                 return -1;
+            } else if (this.sites[0].distance > compareItem.sites[0].distance) {
+                return 1;
+            } else if (this.sites[0].distance < compareItem.sites[0].distance) {
+                return -1;
             } else {
-                return (Integer) (this.sites[0].distance - compareItem.sites[0].distance);
+                return 0;
             }
         }
         if (sortType == 'CreatedDate DESC') {
