--- a/force-app/main/default/classes/DistanceHelper.cls
+++ b/force-app/main/default/classes/DistanceHelper.cls
@@ -2,27 +2,29 @@
  * Created by Kryvolap on 26.03.2019.
  */
 
-public class DistanceHelper {
+public without sharing class DistanceHelper {
     public static final Set<String> MILE_LOCALES = new Set<String>{
             'en_US', 'en_GB', 'es_US'
     };
     private static String unitsOfMeasurement;
     private static Location userLocation;
+    private static User communityUser;
+    private static Boolean alreadyInit = false;
     public static String getUnitsOfMeasurement() {
-        if (unitsOfMeasurement == null || unitsOfMeasurement == '') {
+        if (!alreadyInit) {
             init();
         }
         return unitsOfMeasurement;
     }
     public static String getUnitsOfMeasurementLabel() {
-        if (unitsOfMeasurement == null || unitsOfMeasurement == '') {
+        if (!alreadyInit) {
             init();
         }
 
         return (unitsOfMeasurement == 'mi' ? Label.UOM_Miles : Label.UOM_Kilometers);
     }
     public static Location getUserLocation() {
-        if (userLocation == null) {
+        if (!alreadyInit) {
             init();
         }
         return userLocation;
@@ -41,7 +43,10 @@ public class DistanceHelper {
     }
 
     private static void init() {
-        User communityUser = [SELECT Id, LocaleSidKey FROM User WHERE Id = :UserInfo.getUserId()];
+        if (communityUser == null) {
+            communityUser = [SELECT Id, LocaleSidKey FROM User WHERE Id = :UserInfo.getUserId()];
+        }
+
         if (MILE_LOCALES.contains(communityUser.LocaleSidKey)) {
             unitsOfMeasurement = 'mi';
         } else {
@@ -51,5 +56,6 @@ public class DistanceHelper {
         if (communityContact.MailingLatitude != null && communityContact.MailingLongitude != null) {
             userLocation = Location.newInstance(communityContact.MailingLatitude, communityContact.MailingLongitude);
         }
+        alreadyInit = true;
     }
 }
