add CTC junction for mapping

--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -42,7 +42,7 @@ public with sharing class ResourceRemote {
     }
 
     @AuraEnabled
-    public static String getTrialId(String userMode) {
+    public static String getTrialId() {
 
         try {
             String trialId;
