--- a/force-app/main/default/classes/ParticipantItem.cls
+++ b/force-app/main/default/classes/ParticipantItem.cls
@@ -9,10 +9,16 @@ public class ParticipantItem {
     @AuraEnabled public Map<String, PEStatusState> peStatusStateMap = PEStatusState.STATUSES_MAP;
     @AuraEnabled public List<String> peStatusesPathList = PEStatusState.STATUS_STEPS_LIST;
     @AuraEnabled public List<LabelValueItem> psePathSteps = PSEService.getInstance().getPSEPathSteps();
+    @AuraEnabled public Boolean showPSESteps;
     
     public ParticipantItem(Participant_Enrollment__c pe){
         this.pe = pe;
         this.pse = pe.Participant_Study_Enrollment__r;
     }
-    
+
+    public ParticipantItem(ParticipantService.ParticipantState participantState) {
+        this.pe = participantState.pe;
+        this.pse = participantState.pse;
+        this.showPSESteps = participantState.isPremium;
+    }
 }
