--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -16,10 +16,13 @@ public class ParticipantService {
         @AuraEnabled public Participant__c participant;
         @AuraEnabled public String participantName;
         @AuraEnabled public Boolean showTerms;
+        @AuraEnabled public Boolean showVisits;
+        @AuraEnabled public Boolean isPremium;
 
         public ParticipantState(){
             value = ParticipantStates.PROSPECT;
             isDelegate = false;
+            isPremium = false;
         }
     }
     
@@ -46,6 +49,7 @@ public class ParticipantService {
 
             if(participantState.pe.Study_Site__r.Clinical_Trial_Profile__c != null) {
                 participantState.ctp = participantState.pe.Study_Site__r.Clinical_Trial_Profile__r;
+                if(participantState.ctp.Participating_in_Patient_Portal__c == 'Yes') participantState.isPremium = true;
             }
             if(PEStatusState.PE_STATUS_GROUP_FAILED.contains(participantState.pe.Participant_Status__c)){
                 participantState.value = ParticipantStates.ALUMNI;
@@ -58,9 +62,11 @@ public class ParticipantService {
                 List<Participant_Study_Enrollment__c> pseList = PSEService.getPSEListForParticipant();
                 if(pseList.size() > 0) {
                     participantState.pse = pseList[0];
+                    if(participantState.isPremium) participantState.showVisits = true;
                     participantState.isDelegate = participantState.pse.Participant__r.Contact__c != CommunityService.getInstance().getCurrentContactId();
                     if(PSEService.PSE_STATUS_GROUP_COMPLETE.contains(participantState.pse.Status__c)){
                         participantState.value = ParticipantStates.ALUMNI;
+                        participantState.showVisits = false;
                     }
                 }
             }
