Add unit tests and reach coverage

--- a/force-app/main/default/classes/StudyListViewController.cls
+++ b/force-app/main/default/classes/StudyListViewController.cls
@@ -22,6 +22,7 @@ public without sharing class StudyListViewController {
         List<ParticipantItem> peListNoLongerRecr = new List<ParticipantItem>();
     }
 
+    @TestVisible
     class HCPInitData {
         public StudyTrialService.StudySortData sortData;
         public StudyTrialService.StudyFilterData filterData;
