--- a/force-app/main/default/classes/StudySiteService.cls
+++ b/force-app/main/default/classes/StudySiteService.cls
@@ -336,6 +336,9 @@ public without sharing class StudySiteService {
         public Boolean hasActiveHCPE;
         public Datetime hcpCreatedDate;
 
+        public StudySiteDistanceWrapper() {
+        }
+
         public StudySiteDistanceWrapper(Study_Site__c site, HCP_Enrollment__c hcpe, String sortType) {
             this.site = site;
             this.distance = DistanceHelper.calculateDistanceTo(site.Site__r);
