Comments after Demo fix: -Referring - changing MRR to Pre-eligibility Screening -My Patients Show excluded default -Referring Select Site improvement -Language for Invite RP

--- a/force-app/main/default/classes/MedicalRecordReviewLogController.cls
+++ b/force-app/main/default/classes/MedicalRecordReviewLogController.cls
@@ -38,7 +38,7 @@ public without sharing class MedicalRecordReviewLogController {
             //filters:
             pDetail.peFilter = new ParticipantEnrollmentService.PEFilter(pDetail.peFilterData);
             pDetail.peFilter.study = trialId;
-            pDetail.peFilter.showExcludedFromReferring='hide';
+            pDetail.peFilter.showExcludedFromReferring='show';
             //set up search fields
             pDetail.peFilter.searchFields = new List<String>{
                     'Participant_Name__c',
